# five-in-a-row

./: .gitignore  Cargo.toml  readme.md
src/: api.rs  five_in_row.rs  game.rs  gameplay.rs  lib.rs  main.rs
src/api/: api.rs  connect.rs  fetch.rs  game_connection.rs  play.rs  player.rs  register.rs  status.rs
src/api/jobs_cz/: connect.rs  fetch.rs  jobs_cz.rs  play.rs  player.rs  register.rs  status.rs
src/five_in_a_row/: direction.rs  five_in_a_row.rs
src/five_in_row/: direction.rs  five_in_row.rs  move.rs
src/game/: error.rs  game.rs  gameplay.rs  score.rs  suggestion.rs
tests/: five_in_a_row.rs
