[package]
name = "game_play"
version = "0.1.0"
authors = ["Lukas Kral <lukas.kral@citrix.com>"]
edition = "2018"

[dependencies]
reqwest = "0.11.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = { version = "1.14", features = ["full"] }
rand = "0.8.4"
regex = "1.5.4"
async-trait = "0.1.51"
